Update raiz do projeto index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji Star Rating</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
@@ -17,11 +17,11 @@
         <div class="content">
             <div class="outer">
                 <div class="emojis">
-                    <li class="SlideImg"><img src="/img/odio.png" alt=""></li>
-                    <li><img src="/img/qmerda.png" alt=""></li>
-                    <li><img src="/img/satisfeito.png" alt=""></li>
-                    <li><img src="/img/kiss.png" alt=""></li>
-                    <li><img src="/img/feliz.png" alt=""></li>
+                    <li class="SlideImg"><img src="./img/odio.png" alt=""></li>
+                    <li><img src="./img/qmerda.png" alt=""></li>
+                    <li><img src="./img/satisfeito.png" alt=""></li>
+                    <li><img src="./img/kiss.png" alt=""></li>
+                    <li><img src="./img/feliz.png" alt=""></li>
                 </div>
             </div>
             <div class="stars">
